Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-1453

CDATA is not correctly parsed by guththila

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    Description

      guththila does not correcly parses <![CDATA[ ... ]]>

      Here is the result of axiom_node_create_from_buffer/axiom_note_to_string:
      Input: <root><!CDATA[abc&#123;def]></root>
      Result: <root></root>
      Expected: <root>abc&#123;def</root>

      Input: <root><![CDATA[abc</root>def]]></root>
      Result: <root>/root>def]]></root>
      Expected: <root>abc<root>def</root>

      Attachments

        Issue Links

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            Unassigned Unassigned
            dolmen-oxymel Olivier Mengué
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment