Fix parsing of CDATA sections

JIRA: AXIS2C-1453